--- a/src/style.css
+++ b/src/style.css
@@ -10,12 +10,6 @@ li {
   list-style: none;
 }
 
-.item {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
 .heading {
   display: flex;
   align-items: center;
@@ -38,7 +32,7 @@ li {
 .item {
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 0px 2px 20px;
+  box-shadow: 0 2px 20px;
   margin-bottom: 1px;
   align-items: center;
   justify-content: flex-start;
@@ -53,7 +47,7 @@ li {
 .list-head input {
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 0px 2px 20px;
+  box-shadow: 0 2px 20px;
   width: 305px;
   border: none;
 }
@@ -64,7 +58,7 @@ li {
   height: 50px;
   border-radius: 4px;
   font-size: 15px;
-  box-shadow: 0px 2px 20px;
+  box-shadow: 0 2px 20px;
 }
 
 .itme-desc {
