--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ li {
   align-items: center;
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 0px 2px 20px;
+  box-shadow: 0 2px 20px;
   width: 305px;
   justify-content: space-between;
 }
