in this branch implemented add, remove and modify tasks functionalities.
in this commit
- added a function to add a new task
- added a function to remove tasks
- added a function to edit current tasks
- stored tasks in local storage
- after deletion set the proper indexes for remaining tasks.

--- a/src/style.css
+++ b/src/style.css
@@ -25,8 +25,24 @@ li {
   font-size: 20px;
 }
 
-.tasks {
+.tasklist {
   width: 325px;
+}
+
+#tasks {
+  list-style: none;
+  padding: 0;
+}
+
+#taskchk {
+  display: flex;
+  gap: 5px;
+  justify-content: flex-start;
+}
+
+#taskdiv {
+  display: flex;
+  justify-content: space-between;
 }
 
 .item {
@@ -38,10 +54,15 @@ li {
   justify-content: flex-start;
   display: flex;
   gap: 10%;
+  flex-direction: column;
 }
 
 .item label {
   width: 325px;
+}
+
+.list-head {
+  display: flex;
 }
 
 .list-head input {
@@ -50,6 +71,11 @@ li {
   box-shadow: 0 2px 20px;
   width: 305px;
   border: none;
+}
+
+.list-head button {
+  position: absolute;
+  display: none;
 }
 
 .clear button {
@@ -65,5 +91,10 @@ li {
   width: 267px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+.task-div {
+  display: flex;
   gap: 6px;
 }
